// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeESQuery @type should return a must clause with a term query for both _deprecated and @types 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "term": Object {
            "@type": "myType",
          },
        },
        Object {
          "term": Object {
            "_deprecated": true,
          },
        },
      ],
    },
  },
}
`;

exports[`makeESQuery _constrainedBy should return a must clause with a term query for both _deprecated and _constrainedBy 1`] = `
Object {
  "query": Object {
    "term": Object {
      "_constrainedBy": "mySchema",
    },
  },
}
`;

exports[`makeESQuery deprecated should return a must clause with just the term query 1`] = `Object {}`;

exports[`makeESQuery everything at once should return a must clause with the kitchen sink 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "term": Object {
            "@type": "myType",
          },
        },
        Object {
          "term": Object {
            "_constrainedBy": "mySchemas",
          },
        },
        Object {
          "term": Object {
            "_deprecated": true,
          },
        },
        Object {
          "query_string": Object {
            "query": "Banana~",
          },
        },
      ],
    },
  },
}
`;

exports[`makeESQuery text query should return a must clause with a query string 1`] = `
Object {
  "query": Object {
    "query_string": Object {
      "query": "banana~",
    },
  },
}
`;
